feat: activate code
